--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "edpowley.com",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://edpowley.github.io/edpowley.com",
+  "homepage": "http://edpowley.com",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
