--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "homepage": "http://edpowley.com",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-parallax": "^2.2.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
